Fix mediaTitle to adjust horizontal alignment
Enact-DCO-1.0-Signed-off-by: Hyeok Jo <hyeok.jo@lge.com>

--- a/packages/moonstone/VideoPlayer/VideoPlayer.module.less
+++ b/packages/moonstone/VideoPlayer/VideoPlayer.module.less
@@ -103,7 +103,10 @@
 							transform: translateY(~"calc(var(--infoComponentsOffset) * -1)") translateZ(0);
 						}
 
-						.moon-locale-non-latin({line-height: @moon-non-latin-header-line-height;});
+						.moon-locale-non-latin({
+							bottom: 5px;
+							line-height: @moon-non-latin-header-line-height;
+						});
 					}
 
 					// Badges and title components
